--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "author": "Holben888 <holben888@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "rollup": "^1.1.2",
-    "rollup-plugin-livereload": "^1.0.0",
+    "rollup": "^1.23.1",
+    "rollup-plugin-livereload": "^1.0.4",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-serve": "^1.0.1",
-    "rollup-plugin-svelte": "^5.0.1",
-    "svelte": "3.0.0-beta.3"
+    "rollup-plugin-svelte": "^5.1.0",
+    "svelte": "^3.12.1"
   },
   "scripts": {
-    "build": "rollup -c rollup.config.js --watch"
+    "start": "rollup -c rollup.config.js --watch",
+    "start-step-0": "rollup -c rollup.config.js --watch",
+    "start-step-1": "rollup -c rollup.config.js --environment DIR:step-1 --watch",
+    "start-step-2": "rollup -c rollup.config.js --environment DIR:step-2 --watch",
+    "start-step-3": "rollup -c rollup.config.js --environment DIR:step-3 --watch",
+    "start-step-4": "rollup -c rollup.config.js --environment DIR:step-4 --watch"
   }
 }
